kubernetes-dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard
  namespace: kubernetes-dashboard
spec:
  ingressClassName: contour
  rules:
    - host: dashboard2.52.20.80.72.nip.io
      http:
        paths:
        - backend:
            service:
              name: kubernetes-dashboard-kong-proxy
              port:
                number: 80
          path: /
          pathType: ImplementationSpecific
